Fixed the tag line under the image. Too much font.

--- a/style.css
+++ b/style.css
@@ -357,8 +357,8 @@ span.header-ribbon img {
 
 
 #welcome {
-    font:100 33px chaparral-pro-1","chaparral-pro-2,Georgia;
-    color:#D52815;
+    font: 100 18px chaparral-pro-1","chaparral-pro-2,Georgia;
+    color: #444;
     width:548px;
     float:left;
     margin-right:55px;
